Fixes #781: Identify panel does not fit to max width on mobile (#782)

--- a/web/client/product/assets/css/viewer.css
+++ b/web/client/product/assets/css/viewer.css
@@ -281,8 +281,13 @@ html, body, #container, .fill {
 }
 
 #mapstore-getfeatureinfo {
-    width: 500px !important;
     max-width: 100%;
+}
+
+@media (min-width: 500px) {
+    #mapstore-getfeatureinfo {
+        min-width: 500px !important;
+    }
 }
 
 #mapstore-getfeatureinfo .modal-body .panel-heading {
